--- a/dev.yml
+++ b/dev.yml
@@ -18,6 +18,7 @@
     - { role: nginx, tags: [nginx] }
     - { role: logrotate, tags: [logrotate] }
     - { role: princexml, tags: [princexml] }
+    - { role: epubcheck, tags: [epubcheck] }
     - { role: kindlegen, kindlegen_version: "2.9", tags: [kindlegen] }
     - { role: saxon-he, tags: [saxon-he] }
     - { role: composer, tags: [composer] }
