--- a/group_vars/all/custom.yml
+++ b/group_vars/all/custom.yml
@@ -1,2 +1,3 @@
 nginx_conf: nginx-includes/nginx.conf.child
 nginx_wordpress_site_conf: nginx-includes/wordpress-site.conf.child
+nginx_fastcgi_read_timeout: 600s
