--- a/roles/local-development/tasks/main.yml
+++ b/roles/local-development/tasks/main.yml
@@ -62,3 +62,10 @@
     login_user: "{{ mysql_root_user }}"
     login_password: "{{ mysql_root_password }}"
   with_dict: "{{ wordpress_sites }}"
+- name: Install WP-CLI login helper
+  command: wp login install --activate
+  args:
+    chdir: "{{ www_root }}/{{ item.key }}/{{ item.value.current_path | default('current') }}/"
+  with_dict: "{{ wordpress_sites }}"
+  become: true
+  become_user: "{{ web_user }}"
