--- a/roles/saxon-he/tasks/main.yml
+++ b/roles/saxon-he/tasks/main.yml
@@ -1,11 +1,14 @@
 ---
-- name: Create Saxon-HE directory
+- name: Ensure path exists for Saxon-HE maven artifact
   file:
-    path: /opt/saxon-he/
+    path: /opt/saxon-he
     state: directory
+
 - name: Install Saxon-HE
   maven_artifact:
     group_id: net.sf.saxon
     artifact_id: Saxon-HE
     version: "{{ saxon_he_version }}"
+    repository_url: http://repo1.maven.org/maven2
     dest: /opt/saxon-he/saxon-he.jar
+    mode: 0755
